test/invalid/rank-2-method-b.js
var obj = { bla: function(x) {return x; } };
obj = { bla: function(x) {return 2; } }; 
var x = 'a';
x = obj.bla('b'); // returns 2, incompatible with 'a'

